program-tests/zero-copy-derive-test/tests/ui/fail/48_tuple_single_field.stderr
error: ZeroCopy only supports structs with named fields
 --> tests/ui/fail/48_tuple_single_field.rs:6:28
  |
6 | pub struct SingleFieldTuple(pub u32);
  |                            ^^^^^^^^^
